@@ -101,6 +101,7 @@ Additions:
    * Add support for "clicked" callback on Return/space/KP_Enter key press for image.
    * Add "virtualkeypad,size,changed" callback on virtualkeypad min size change for conformant.
    * Add elm_slider_step_get(), elm_slider_step_set() for slider.
+   * Add ELM_OBJECT_MULTIPLE_SELECT_MODE_WITH_CONTROL select mode for genlist/gengrid.
 
 Improvements:
 
