@@ -1735,3 +1735,9 @@
 2013-10-30  Shilpa Onkar Singh
 
         * slider: Added elm_slider_step_get(), elm_slider_step_set().
+
+2013-10-02  Ryuan Choi (ryuan)
+
+        * genlist , gengrid: Add ELM_OBJECT_MULTIPLE_SELECT_MODE_WITH_CONTROL.
+        It disallow multiple selection when clicked without control pressed although
+        multiple selection is enabled.
